feat: add content in html and css

--- a/index.html
+++ b/index.html
@@ -7,6 +7,25 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <div class="main">
+        <h2>rsschool-cv</h2>
+        <h1>Ashurkevich Kiryl</h1>
+        <h3>Rolling scopes school student JSFE2023Q4 course</h3>
+        <h2>Conatcnts</h2>
+        <ul>
+            <li>Phone: +375 11 111 11 11</ul>
+            <li>E-mail: kvashurkevich@gmail.com</ul>
+            
+        </ul>
+        <h2>Briefly About Myself</h2>
+        <p>There is a great desire to learn new things.</p>
+        <ul>
+            Skills and Proficiency
+            <li>HTML5, CSS</li>
+            <li>JavaScript Basics</li>
+            <li>Git, GitHub</li>
+        </ul>
+    </div>
     
 </body>
 </html>
